--- a/Generics_Test/Generics_Test.csproj
+++ b/Generics_Test/Generics_Test.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UnitTestProject1\UnitTestProject1.csproj" />
+  </ItemGroup>
+
 </Project>
